fixed spacing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,7 @@ body {
 }
 
 /* placing the icon */
-.user {
+/* .user {
 	position: absolute;
 	margin-top: 50px;
 	margin-left: -40px;
@@ -243,4 +243,4 @@ body {
 	margin-left: -40px;
 	font-size: 20px;
 	color: #d4550b;
-}
+} */
